# pipeline-kit

./: .codespellignore  .codespellrc  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  improve-need.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix-output.xml
.claude/agents/: package-publisher.md  ticket-checker.md  ticket-implementer.md
.github/: dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-docs-issue.yml
.github/workflows/: RELEASE_GUIDE.md  agent-integration.yml  ci.yml  codespell.yml  coverage.yml  install-e2e.yml  pr-comment.yml  release.yml  rust-ci.yml  security.yml
.pipeline-kit/: config.toml
.pipeline-kit/agents/: reviewer.md  ui-code-checker.md
.pipeline-kit/pipelines/: simple-task.yaml  ticket-implement.yaml
.ruler/: AGENTS.md
docs/: blueprint.md  implement-plan.md  ticket-progress.md  userflow.md
docs/spec/ticket-1.1/: check.md  spec.md
docs/spec/ticket-1.2/: check.md  spec.md
docs/spec/ticket-2.1/: check.md  spec.md
docs/spec/ticket-2.2/: check.md  enhance-plan.md  spec.md
docs/spec/ticket-3.1/: check.md  spec.md
docs/spec/ticket-3.1-fix.1/: spec.md
docs/spec/ticket-3.1-fix.2/: spec.md
docs/spec/ticket-3.1-fix.3/: spec.md
docs/spec/ticket-4.1/: check.md  spec.md
docs/spec/ticket-4.1-fix/: spec.md
docs/spec/ticket-4.2/: check.md  spec.md
docs/spec/ticket-4.2-fix/: spec.md
docs/spec/ticket-4.3/: check.md  spec.md
docs/spec/ticket-4.4/: check.md  spec.md
docs/spec/ticket-5.1/: check.md  spec.md
docs/spec/ticket-5.1-fix.1/: spec.md
docs/spec/ticket-5.1-fix.2/: spec.md
docs/spec/ticket-5.1-fix.3/: spec.md
docs/spec/ticket-9.1-cli-executor/: spec.md
docs/spec/ticket-9.2-install-script/: spec.md
docs/spec/ticket-9.3-tui-event-handler/: spec.md
pipeline-kit-cli/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.js
pipeline-kit-cli/lib/: platform.js
pipeline-kit-cli/scripts/: README.md  clean_vendor.js  install.js  install_native_deps.sh  test_install_native_deps.sh
pipeline-kit-cli/test/: binary-path.test.js  e2e-cli.test.js  install.test.js  integration.test.js  platform.test.js
pipeline-kit-rs/: Cargo.toml
pipeline-kit-rs/.cargo/: audit.toml
pipeline-kit-rs/.config/: nextest.toml
pipeline-kit-rs/crates/cli/: Cargo.toml
pipeline-kit-rs/crates/cli/src/: main.rs
pipeline-kit-rs/crates/core/: Cargo.toml
pipeline-kit-rs/crates/core/src/: lib.rs
pipeline-kit-rs/crates/core/src/agents/: agent_type.rs  base.rs  cli_executor.rs  factory.rs  manager.rs  mod.rs
pipeline-kit-rs/crates/core/src/agents/adapters/: claude_adapter.rs  codex_adapter.rs  cursor_adapter.rs  gemini_adapter.rs  mock_agent.rs  mod.rs  qwen_adapter.rs
pipeline-kit-rs/crates/core/src/config/: error.rs  loader.rs  mod.rs  models.rs
pipeline-kit-rs/crates/core/src/engine/: mod.rs  mod.rs.bak
pipeline-kit-rs/crates/core/src/init/: error.rs  generator.rs  mod.rs  templates.rs
pipeline-kit-rs/crates/core/src/state/: manager.rs  mod.rs  process.rs
pipeline-kit-rs/crates/core/tests/: agent_integration.rs  cli_executor.rs  e2e_pipeline.rs  pipeline_engine.rs  pipeline_engine.rs.disabled  qwen_integration.rs
pipeline-kit-rs/crates/core/tests/common/: assertions.rs  fixtures.rs  mock_agents.rs  mock_cli.py  mod.rs
pipeline-kit-rs/crates/protocol/: Cargo.toml
pipeline-kit-rs/crates/protocol-ts/: Cargo.toml
pipeline-kit-rs/crates/protocol/src/: agent_models.rs  config_models.rs  ipc.rs  lib.rs  pipeline_models.rs  process_models.rs
pipeline-kit-rs/crates/protocol/tests/: serialization.rs
pipeline-kit-rs/crates/tui/: Cargo.toml
pipeline-kit-rs/crates/tui/src/: app.rs  event.rs  event_handler.rs  lib.rs  main.rs  tui.rs
pipeline-kit-rs/crates/tui/src/widgets/: command_composer.rs  dashboard.rs  detail_view.rs  mod.rs
prompt/: check.md  fix-and-publish.md  proceed.md  prompt-enhance.md  publish.md
scripts/: asciicheck.py  pre-release-check.sh  verify-rust.sh  verify-ts-types.sh
templates/agents/: developer.md
templates/pipelines/: code-review.yaml  simple-task.yaml
