[package]
name = "pk-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "CLI entry point for pipeline-kit"

[[bin]]
name = "pipeline"
path = "src/main.rs"

[dependencies]
pk-tui = { path = "../tui" }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
