[package]
name = "pk-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "CLI entry point for pipeline-kit"

[[bin]]
name = "pipeline"
path = "src/main.rs"

[dependencies]
pk-tui = { path = "../tui" }
pk-core = { path = "../core" }
pk-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
serde_json = "1"
