[package]
name = "pk-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core pipeline engine and agent management"

[dependencies]
pk-protocol = { path = "../protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
gray_matter = "0.2"
thiserror = "1.0"
walkdir = "2.4"
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
which = "6.0"
tempfile = "3.10"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.40", features = ["full"] }
tokio-test = "0.4"

[features]
integration-tests = []
