[package]
name = "pk-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core pipeline engine and agent management"

[dependencies]
pk-protocol = { path = "../protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
gray_matter = "0.2"
thiserror = "1.0"
walkdir = "2.4"
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
tempfile = "3.10"
which = "6.0"
async-stream = "0.3.6"
rust-embed = { version = "8.0", features = ["debug-embed", "interpolate-folder-path"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.40", features = ["full"] }

[features]
integration-tests = []
e2e-cli-tests = []  # Enable real CLI integration tests (requires actual CLI tools installed)
