[package]
name = "pk-protocol"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Shared protocol definitions for pipeline-kit"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "11.1", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.40", features = ["sync"] }

[dev-dependencies]
serde_yaml = "0.9"
