[package]
name = "pk-tui"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Terminal UI for pipeline-kit"

[[bin]]
name = "pk-tui"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
pk-protocol = { path = "../protocol" }
pk-core = { path = "../core" }

# TUI
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"
color-eyre = "0.6"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
